--- a/samconfig.toml
+++ b/samconfig.toml
@@ -16,6 +16,10 @@ lint = true
 capabilities = "CAPABILITY_IAM"
 confirm_changeset = true
 resolve_s3 = true
+stack_name = "vanity-connect-stack"
+s3_prefix = "vanity-connect-stack"
+region = "us-east-1"
+image_repositories = []
 
 [default.package.parameters]
 resolve_s3 = true
