--- a/template.yaml
+++ b/template.yaml
@@ -1,41 +1,45 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Transform: AWS::Serverless-2016-10-31
-Description: >
-  VanityConnect
 
-  Sample SAM Template for VanityConnect
-  
-# More info about Globals: https://github.com/awslabs/serverless-application-model/blob/master/docs/globals.rst
+Description: Vanity number generator – Lambda + DynamoDB (On-Demand)
+
 Globals:
   Function:
-    Timeout: 3
+    Runtime: nodejs18.x
+    Architectures: [arm64]
+    MemorySize: 256      # 够用就行，可后调
+    Timeout: 10
+    Environment:
+      Variables:
+        TABLE_NAME: VanityNumbers
 
 Resources:
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
+  VanityTable:
+    Type: AWS::DynamoDB::Table
     Properties:
-      CodeUri: hello-world/
-      Handler: app.lambdaHandler
-      Runtime: nodejs18.x
-      Architectures:
-        - x86_64
-      Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-          Properties:
-            Path: /hello
-            Method: get
+      TableName: VanityNumbers
+      BillingMode: PAY_PER_REQUEST         # 即 On-Demand
+      AttributeDefinitions:
+        - AttributeName: callerNumber
+          AttributeType: S
+        - AttributeName: createdAt
+          AttributeType: S
+      KeySchema:
+        - AttributeName: callerNumber
+          KeyType: HASH
+        - AttributeName: createdAt
+          KeyType: RANGE
+
+  VanityFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      Handler: dist/handler.handler        # 注意：编译后路径
+      CodeUri: .                           # SAM 自动取根目录
+      Policies:
+        - DynamoDBCrudPolicy:
+            TableName: VanityNumbers
 
 Outputs:
-  # ServerlessRestApi is an implicit API created out of Events key under Serverless::Function
-  # Find out more about other implicit resources you can reference within SAM
-  # https://github.com/awslabs/serverless-application-model/blob/master/docs/internals/generated_resources.rst#api
-  HelloWorldApi:
-    Description: "API Gateway endpoint URL for Prod stage for Hello World function"
-    Value: !Sub "https://${ServerlessRestApi}.execute-api.${AWS::Region}.amazonaws.com/Prod/hello/"
-  HelloWorldFunction:
-    Description: "Hello World Lambda Function ARN"
-    Value: !GetAtt HelloWorldFunction.Arn
-  HelloWorldFunctionIamRole:
-    Description: "Implicit IAM Role created for Hello World function"
-    Value: !GetAtt HelloWorldFunctionRole.Arn
+  VanityFunctionArn:
+    Description: "ARN of the vanity Lambda"
+    Value: !GetAtt VanityFunction.Arn
