--- a/template.yaml
+++ b/template.yaml
@@ -6,8 +6,7 @@ Description: Vanity number generator – Lambda + DynamoDB (On-Demand)
 Globals:
   Function:
     Runtime: nodejs18.x
-    Architectures: [arm64]
-    MemorySize: 256      # 够用就行，可后调
+    MemorySize: 256
     Timeout: 10
     Environment:
       Variables:
@@ -16,9 +15,10 @@ Globals:
 Resources:
   VanityTable:
     Type: AWS::DynamoDB::Table
+    DeletionPolicy: Retain    
     Properties:
       TableName: VanityNumbers
-      BillingMode: PAY_PER_REQUEST         # 即 On-Demand
+      BillingMode: PAY_PER_REQUEST
       AttributeDefinitions:
         - AttributeName: callerNumber
           AttributeType: S
@@ -33,13 +33,14 @@ Resources:
   VanityFunction:
     Type: AWS::Serverless::Function
     Properties:
-      Handler: dist/handler.handler        # 注意：编译后路径
-      CodeUri: .                           # SAM 自动取根目录
+      CodeUri: dist/
+      Handler: handler.handler
+      Runtime: nodejs18.x
       Policies:
         - DynamoDBCrudPolicy:
             TableName: VanityNumbers
 
 Outputs:
   VanityFunctionArn:
-    Description: "ARN of the vanity Lambda"
+    Description: ARN of the vanity Lambda
     Value: !GetAtt VanityFunction.Arn
