--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.828.0"
+    "@aws-lambda-powertools/logger": "^2.21.0",
+    "@aws-sdk/client-dynamodb": "^3.828.0",
+    "@aws-sdk/client-secrets-manager": "^3.828.0",
+    "@aws-sdk/lib-dynamodb": "^3.828.0",
+    "openai": "^5.3.0"
   }
 }
