--- a/template.yaml
+++ b/template.yaml
@@ -7,10 +7,11 @@ Globals:
   Function:
     Runtime: nodejs18.x
     MemorySize: 256
-    Timeout: 10
+    Timeout: 40
     Environment:
       Variables:
         TABLE_NAME: VanityNumbers
+        OPENAI_API_KEY_SECRET: prod/openai_key
 
 Resources:
   VanityTable:
@@ -39,6 +40,11 @@ Resources:
       Policies:
         - DynamoDBCrudPolicy:
             TableName: VanityNumbers
+        - Statement:
+            - Effect: Allow
+              Action:
+                - secretsmanager:GetSecretValue
+              Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/vanity/*
 
 Outputs:
   VanityFunctionArn:
