--- a/template.yaml
+++ b/template.yaml
@@ -44,7 +44,7 @@ Resources:
             - Effect: Allow
               Action:
                 - secretsmanager:GetSecretValue
-              Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:/vanity/*
+              Resource: !Sub arn:aws:secretsmanager:${AWS::Region}:${AWS::AccountId}:secret:prod/openai_key-* 
 
 Outputs:
   VanityFunctionArn:
